README.md update

--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ location_image: "voz.png"
 
 resized_location_image : "voz_resized.png"
 
-costume_start_goal : True
+costume_start_goal : False
 
 # This is hardcoded start and goal position and applied only if costume_start_goal is False
 start_longitude: 14.576700
@@ -23,15 +23,14 @@ goal_latitude : 45.229204
 
 result_image : "voz_result.png"
 table_name : "runtime_results.png"
-result_image_name : "result_image.png"
 
 grid_size : 10.0  # [m]
-robot_radius : 10.0  # [m]
+robot_radius : 5.0  # [m]
 
 
 # thread_enable : True - thread for plotting map
 # thread_enable map : False - for algorithm runtime calculation
-thread_enable : True
+thread_enable : False
 
 #test and plot options
 # 1. a_star
@@ -47,25 +46,25 @@ thread_enable : True
 test_algorithm : 
 - "a_star"
 - "bidirectional_a_star"
-#- "dijkstra"
-#- "d_star"
+- "dijkstra"
+- "d_star"
 #- "d_star_lite"
-#- "breadth_first_search"
-#- "bidirectional_breadth_first_search"
-#- "depth_first_search"
-#- "greedy_best_first_search"
+- "breadth_first_search"
+- "bidirectional_breadth_first_search"
+- "depth_first_search"
+- "greedy_best_first_search"
 
 
 plot_algorithms:
 - "a_star"
 - "bidirectional_a_star"
 - "dijkstra"
-#- "d_star"
-#- "d_star_lite"
-#- "breadth_first_search"
-#- "bidirectional_breadth_first_search"
-#- "depth_first_search"
-#- "greedy_best_first_search"
+- "d_star"
+- "d_star_lite"
+- "breadth_first_search"
+- "bidirectional_breadth_first_search"
+- "depth_first_search"
+- "greedy_best_first_search"
 
 
 
