Generating costmap updated

--- a/config.yaml
+++ b/config.yaml
@@ -51,7 +51,6 @@ test_algorithm :
 #- "d_star_lite"
 - "breadth_first_search"
 - "bidirectional_breadth_first_search"
-- "depth_first_search"
 - "greedy_best_first_search"
 
 
@@ -60,11 +59,14 @@ plot_algorithms:
 - "bidirectional_a_star"
 - "dijkstra"
 - "d_star"
-- "d_star_lite"
+#- "d_star_lite"
 - "breadth_first_search"
 - "bidirectional_breadth_first_search"
-- "depth_first_search"
 - "greedy_best_first_search"
+
+## Step 4: Cost map generation
+result_costmap_name : "voz_costmap.png"
+cost_map : True
 
 
 
