--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,3 +6,5 @@ pytest == 8.1.1 # For unit test
 pytest-xdist == 3.5.0 # For unit test
 mypy == 1.9.0 # For unit test
 ruff == 0.3.4 # For unit test
+scikit-image
+opencv-python
