--- a/config.yaml
+++ b/config.yaml
@@ -44,25 +44,25 @@ thread_enable : False
 # 9. greedy_best_first_search
 
 test_algorithm : 
-#- "a_star"
-#- "bidirectional_a_star"
-#- "dijkstra"
-#- "d_star"
+- "a_star"
+- "bidirectional_a_star"
+- "dijkstra"
+- "d_star"
 - "d_star_lite"
-#- "breadth_first_search"
-#- "bidirectional_breadth_first_search"
-#- "greedy_best_first_search"
+- "breadth_first_search"
+- "bidirectional_breadth_first_search"
+- "greedy_best_first_search"
 
 
 plot_algorithms:
-#- "a_star"
-#- "bidirectional_a_star"
-#- "dijkstra"
-#- "d_star"
+- "a_star"
+- "bidirectional_a_star"
+- "dijkstra"
+- "d_star"
 - "d_star_lite"
-#- "breadth_first_search"
-#- "bidirectional_breadth_first_search"
-#- "greedy_best_first_search"
+- "breadth_first_search"
+- "bidirectional_breadth_first_search"
+- "greedy_best_first_search"
 
 ## Step 4: Cost map generation
 result_costmap_name : "voz_costmap.png"
