--- a/config.yaml
+++ b/config.yaml
@@ -6,18 +6,24 @@ location_folder : "voz2"
 location_image: "voz2.png"
 
 
-## Step 2 : Data extraction and processing from OpenStreetMap
+## Step 2 : Data extraction and processing from OpenStreetMap 
+## Step 4: Cost map generation
 
 resized_location_image : "voz_resized2.png"
+result_costmap_name : "voz_costmap.png"
 
 custom_start_goal : False
 
-# This is hardcoded start and goal position and applied only if custom_start_goal is False
-start_longitude: 14.576700
-start_latitude : 45.235964
+# Step 2 : False, Step 4 : True
+cost_map : False
 
-goal_longitude: 14.584563
-goal_latitude : 45.229204
+# This is hardcoded start and goal position and applied only if custom_start_goal is False
+start_latitude : 45.234781
+start_longitude: 14.577538
+
+goal_latitude : 45.230241
+goal_longitude: 14.583173
+
 
 ## Step 3: Path planning algorithms testing
 
@@ -64,16 +70,23 @@ plot_algorithms:
 - "bidirectional_breadth_first_search"
 - "greedy_best_first_search"
 
-## Step 4: Cost map generation
-result_costmap_name : "voz_costmap.png"
-cost_map : True
-cost_map_show : True
+
 
 ## Step 5: Path planning algorithms testing with cost map
 red_cost : 10
 yellow_cost : 5
 green_cost : 2
 
+## Step 6: Path optimization
+
+# optimization
+optimization : True
+
+# speed limits [knots]
+max_boat_speed : 12
+red_speed : 2
+yellow_speed : 5
+green_speed : 8
 
 
 
