Path planning w costmap updated

--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ resized_location_image : "voz_resized2.png"
 custom_start_goal : False
 
 # Step 2 : False, Step 4 : True
-cost_map : False
+cost_map : True
 
 # This is hardcoded start and goal position and applied only if custom_start_goal is False
 start_latitude : 45.234781
@@ -56,6 +56,7 @@ test_algorithm :
 - "bidirectional_breadth_first_search"
 - "greedy_best_first_search"
 
+
 plot_algorithms :
 - "a_star"
 - "bidirectional_a_star"
@@ -72,6 +73,7 @@ result_costmap_name : "costmap_path.png"
 result_costmap_table : "costmap_table.png"
 
 ## Step 5: Path planning algorithms testing with cost map
+test_parameters : False
 red_cost : 10
 yellow_cost : 5
 green_cost : 2
