--- a/config.yaml
+++ b/config.yaml
@@ -46,7 +46,7 @@ thread_enable : True
 # 8. depth_first_search
 # 9. greedy_best_first_search
 
-test_algorithm :
+test_algorithms :
 - "a_star"
 - "bidirectional_a_star"
 - "dijkstra"
@@ -75,8 +75,8 @@ result_costmap_table : "costmap_table.png"
 ## Step 5: Path planning algorithms testing with cost map
 test_parameters : False
 red_cost : 10
-yellow_cost : 1.5
-green_cost : 1.2
+yellow_cost : 2.5
+green_cost : 2
 
 ## Step 6: Path optimization
 
