--- a/osm_data_processing/config.yaml
+++ b/osm_data_processing/config.yaml
@@ -18,12 +18,14 @@ custom_start_goal : False
 # Step 2 : False, Step 4 : True
 cost_map : True
 
-# This is hardcoded start and goal position and applied only if custom_start_goal is False
-start_latitude : 45.234781
-start_longitude: 14.577538
-
-goal_latitude : 45.230241
-goal_longitude: 14.583173
+waypoints :
+- [45.235309, 14.577240]
+- [45.240601, 14.592553]
+- [45.223621, 14.606432] 
+- [45.205115, 14.623724] 
+- [45.188642, 14.634578]
+- [45.164687, 14.637477]
+- [45.153386, 14.603332]
 
 grid_size : 10.0  # [m]
 
