--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ binary_dump/
 __pycache__/
 osm_data_processing/__pycache__/
 test_algorithm/__pycache__/
+test_algorithm/algorithms/__pycache__/
+test_algorithms/results_test
+test_algorithms/.dist/
+test_algorithm/__pycache__/
