--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,10 @@
-## Step 1: Download data from OpenStreetMap (optional)
+## Step 1.1: Download data from OpenStreetMap (optional)
 
 # Process OSM data
-location_folder : "voz2"
+location_folder : "voz"
 
 
-## Step 2 : Data extraction and processing from OpenStreetMap 
-## Step 4: Cost map generation
+## Step 1.2. : Data extraction and processing from OpenStreetMap 
 custom_start_goal : True
 
 # This is hardcoded start and goal position and applied only if custom_start_goal is False
@@ -14,11 +13,6 @@ start_longitude: 14.577538
 
 goal_latitude : 45.230241
 goal_longitude: 14.583173
-
-
-## Step 3: Path planning algorithms testing
-result_image : "path_result.png"
-table_name : "table_results.png"
 
 grid_size : 10.0  # [m]
 robot_radius : 5.0  # [m]
@@ -47,36 +41,6 @@ test_algorithms :
 - "breadth_first_search"
 - "bidirectional_breadth_first_search"
 - "greedy_best_first_search"
-
-
-plot_algorithms :
-- "a_star"
-- "bidirectional_a_star"
-- "dijkstra"
-- "d_star"
-- "d_star_lite"
-- "breadth_first_search"
-- "bidirectional_breadth_first_search"
-- "greedy_best_first_search"
-
-## Step 4: Cost map generation
-
-result_costmap_name : "costmap_path.png"
-result_costmap_table : "costmap_table.png"
-
-## Step 5: Path planning algorithms testing with cost map
-test_parameters : False
-red_cost : 10
-yellow_cost : 2.5
-green_cost : 2
-
-## Step 6: Path optimization
-
-# speed limits [knots]
-max_boat_speed : 12
-red_speed : 2
-yellow_speed : 5
-green_speed : 8
 
 
 
