--- a/osm_data_processing/config.yaml
+++ b/osm_data_processing/config.yaml
@@ -7,7 +7,7 @@ locations_folder :
 #- "sv_marko"
 - "voz"
 - "lokvisce"
-- "rudine"
+#- "rudine"
 #- "dramalj"
 #- "klimno"
 #- "crikvenica"
@@ -19,7 +19,7 @@ locations_folder :
 #- "melska"
 #- "vrbnik"
 
-save_file : kacjak
+save_file : jadranovo
 
 custom_start_goal : False
 
