--- a/path_planning_ws/src/path_planning_server_cpp/CMakeLists.txt
+++ b/path_planning_ws/src/path_planning_server_cpp/CMakeLists.txt
@@ -1,33 +1,39 @@
 cmake_minimum_required(VERSION 3.8)
-project(user_action_interfaces)
+project(path_planning_server_cpp)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 # find dependencies
-
 find_package(ament_cmake REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
+find_package(user_action_interfaces REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_action REQUIRED)
+find_package(rclcpp_components REQUIRED)
 find_package(std_msgs REQUIRED)
-find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(Eigen3 REQUIRED)
 
-rosidl_generate_interfaces (${PROJECT_NAME}
-  "action/StartGoalAction.action"
-  "msg/StartGoalMsg.msg"
-  "msg/CoastMsg.msg"
-  "msg/PathMsg.msg"
-  "msg/PathInfoMsg.msg"
-  "msg/ZonesDictionaryEntry.msg"
-  DEPENDENCIES builtin_interfaces std_msgs
-  DEPENDENCIES builtin_interfaces sensor_msgs
+# Include directories
+include_directories(
+  include
+  ${EIGEN3_INCLUDE_DIR}
 )
 
+add_executable(path_planning_server src/path_planning_server.cpp)
+ament_target_dependencies(path_planning_server rclcpp rclcpp_action std_msgs geometry_msgs nav_msgs user_action_interfaces rclcpp_components Eigen3) 
 
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+install(TARGETS
+  path_planning_server
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -40,8 +46,5 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
-
-
-
 
 ament_package()
