--- a/path_planning_ws/src/path_planning_server/package.xml
+++ b/path_planning_ws/src/path_planning_server/package.xml
@@ -14,6 +14,7 @@
   
   <depend>action_tutorials_interfaces</depend>
   <exec_depend>rclpy</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
