--- a/path_planning_ws/src/path_planning_server_cpp/package.xml
+++ b/path_planning_ws/src/path_planning_server_cpp/package.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
+<?xml-model
+   href="http://download.ros.org/schema/package_format3.xsd"
+   schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>path_planning_server_cpp</name>
   <version>0.0.0</version>
@@ -8,6 +11,7 @@
 
   <!-- Build dependencies -->
   <buildtool_depend>ament_cmake</buildtool_depend>
+
   <build_depend>rclcpp</build_depend>
   <build_depend>rclcpp_action</build_depend>
   <build_depend>rclcpp_components</build_depend>
@@ -16,10 +20,7 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>user_action_interfaces</build_depend>
-  <build_depend>Eigen3</build_depend>
 
-  <!-- Add Gnuplot as a build dependency -->
-  <build_depend>gnuplot</build_depend>
 
   <!-- Export dependencies for runtime -->
   <build_export_depend>rclcpp</build_export_depend>
@@ -30,10 +31,9 @@
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>user_action_interfaces</build_export_depend>
-  <build_export_depend>Eigen3</build_export_depend>
 
-  <!-- Add Gnuplot as an exec dependency -->
-  <exec_depend>gnuplot</exec_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <!-- Execution dependencies -->
   <exec_depend>rclcpp</exec_depend>
@@ -42,4 +42,9 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
+
 </package>
